// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationRisk when it renders should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="p-4 text-neutral-shade-100 grid gap-y-1"
  >
    <p
      class="text-sm font-semibold mb-3"
    >
      Location Risk Calculation
    </p>
    <div
      class="flex items-center justify-between p-2 bg-neutral-shade-3 rounded h-9"
    >
      <span
        class="text-tiny font-medium"
      >
        Task Risk
      </span>
      <div
        class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-medium text-neutral-shade-100"
        role="note"
      >
        <span
          class="flex items-center px-1"
        >
          <i
            aria-hidden="true"
            class=""
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M9.74 11.921c-.497-.053-.91.09-1.21.441-.364.428-.53.811-.53 1.138H6c0-.998.492-1.83 1.008-2.435.796-.934 1.902-1.245 2.947-1.132 1.021.11 2.01.619 2.752 1.36.453.453 1.03.73 1.552.786.498.053.91-.09 1.21-.441.365-.428.531-.812.531-1.138h2c0 .998-.492 1.83-1.008 2.435-.796.934-1.902 1.245-2.947 1.132-1.021-.11-2.01-.619-2.752-1.36-.453-.453-1.03-.73-1.552-.786z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          <span
            class="text-tiny mr-1"
          >
            MEDIUM
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocationRisk when it renders with a contractor risk warning should display an "at risk" contractor row 1`] = `
<DocumentFragment>
  <div
    class="p-4 text-neutral-shade-100 grid gap-y-1"
  >
    <p
      class="text-sm font-semibold mb-3"
    >
      Location Risk Calculation
    </p>
    <div
      class="flex items-center justify-between p-2 bg-neutral-shade-3 rounded h-9"
    >
      <span
        class="text-tiny font-medium"
      >
        Task Risk
      </span>
      <div
        class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-medium text-neutral-shade-100"
        role="note"
      >
        <span
          class="flex items-center px-1"
        >
          <i
            aria-hidden="true"
            class=""
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M9.74 11.921c-.497-.053-.91.09-1.21.441-.364.428-.53.811-.53 1.138H6c0-.998.492-1.83 1.008-2.435.796-.934 1.902-1.245 2.947-1.132 1.021.11 2.01.619 2.752 1.36.453.453 1.03.73 1.552.786.498.053.91-.09 1.21-.441.365-.428.531-.812.531-1.138h2c0 .998-.492 1.83-1.008 2.435-.796.934-1.902 1.245-2.947 1.132-1.021-.11-2.01-.619-2.752-1.36-.453-.453-1.03-.73-1.552-.786z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          <span
            class="text-tiny mr-1"
          >
            MEDIUM
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex items-center justify-between p-2 bg-neutral-shade-3 rounded h-9"
    >
      <span
        class="text-tiny font-medium"
      >
        Contractor
      </span>
      <div
        class="flex items-center"
      >
        <i
          aria-hidden="true"
          class="ci-warning_outline text-sm text-data-red-30 mr-0.5"
        />
        <span
          class="text-tiny text-data-red-30 font-bold uppercase"
        >
          At risk
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocationRisk when it renders with a crew risk warning should display an "at risk" crew row 1`] = `
<DocumentFragment>
  <div
    class="p-4 text-neutral-shade-100 grid gap-y-1"
  >
    <p
      class="text-sm font-semibold mb-3"
    >
      Location Risk Calculation
    </p>
    <div
      class="flex items-center justify-between p-2 bg-neutral-shade-3 rounded h-9"
    >
      <span
        class="text-tiny font-medium"
      >
        Task Risk
      </span>
      <div
        class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-medium text-neutral-shade-100"
        role="note"
      >
        <span
          class="flex items-center px-1"
        >
          <i
            aria-hidden="true"
            class=""
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M9.74 11.921c-.497-.053-.91.09-1.21.441-.364.428-.53.811-.53 1.138H6c0-.998.492-1.83 1.008-2.435.796-.934 1.902-1.245 2.947-1.132 1.021.11 2.01.619 2.752 1.36.453.453 1.03.73 1.552.786.498.053.91-.09 1.21-.441.365-.428.531-.812.531-1.138h2c0 .998-.492 1.83-1.008 2.435-.796.934-1.902 1.245-2.947 1.132-1.021-.11-2.01-.619-2.752-1.36-.453-.453-1.03-.73-1.552-.786z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          <span
            class="text-tiny mr-1"
          >
            MEDIUM
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex items-center justify-between p-2 bg-neutral-shade-3 rounded h-9"
    >
      <span
        class="text-tiny font-medium"
      >
        Crew
      </span>
      <div
        class="flex items-center"
      >
        <i
          aria-hidden="true"
          class="ci-warning_outline text-sm text-data-red-30 mr-0.5"
        />
        <span
          class="text-tiny text-data-red-30 font-bold uppercase"
        >
          At risk
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocationRisk when it renders with a supervisor risk warning should display an "at risk" supervisor row 1`] = `
<DocumentFragment>
  <div
    class="p-4 text-neutral-shade-100 grid gap-y-1"
  >
    <p
      class="text-sm font-semibold mb-3"
    >
      Location Risk Calculation
    </p>
    <div
      class="flex items-center justify-between p-2 bg-neutral-shade-3 rounded h-9"
    >
      <span
        class="text-tiny font-medium"
      >
        Task Risk
      </span>
      <div
        class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-medium text-neutral-shade-100"
        role="note"
      >
        <span
          class="flex items-center px-1"
        >
          <i
            aria-hidden="true"
            class=""
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M9.74 11.921c-.497-.053-.91.09-1.21.441-.364.428-.53.811-.53 1.138H6c0-.998.492-1.83 1.008-2.435.796-.934 1.902-1.245 2.947-1.132 1.021.11 2.01.619 2.752 1.36.453.453 1.03.73 1.552.786.498.053.91-.09 1.21-.441.365-.428.531-.812.531-1.138h2c0 .998-.492 1.83-1.008 2.435-.796.934-1.902 1.245-2.947 1.132-1.021-.11-2.01-.619-2.752-1.36-.453-.453-1.03-.73-1.552-.786z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          <span
            class="text-tiny mr-1"
          >
            MEDIUM
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex items-center justify-between p-2 bg-neutral-shade-3 rounded h-9"
    >
      <span
        class="text-tiny font-medium"
      >
        Primary Project Supervisor
      </span>
      <div
        class="flex items-center"
      >
        <i
          aria-hidden="true"
          class="ci-warning_outline text-sm text-data-red-30 mr-0.5"
        />
        <span
          class="text-tiny text-data-red-30 font-bold uppercase"
        >
          At risk
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocationRisk when it renders with both supervisor and contractor risk warnings should display two "at risk" rows 1`] = `
<DocumentFragment>
  <div
    class="p-4 text-neutral-shade-100 grid gap-y-1"
  >
    <p
      class="text-sm font-semibold mb-3"
    >
      Location Risk Calculation
    </p>
    <div
      class="flex items-center justify-between p-2 bg-neutral-shade-3 rounded h-9"
    >
      <span
        class="text-tiny font-medium"
      >
        Task Risk
      </span>
      <div
        class="flex items-center font-bold shadow-5 h-5 rounded-full p-0.5 w-max uppercase bg-brand-gray-20 whitespace-nowrap bg-risk-medium text-neutral-shade-100"
        role="note"
      >
        <span
          class="flex items-center px-1"
        >
          <i
            aria-hidden="true"
            class=""
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M9.74 11.921c-.497-.053-.91.09-1.21.441-.364.428-.53.811-.53 1.138H6c0-.998.492-1.83 1.008-2.435.796-.934 1.902-1.245 2.947-1.132 1.021.11 2.01.619 2.752 1.36.453.453 1.03.73 1.552.786.498.053.91-.09 1.21-.441.365-.428.531-.812.531-1.138h2c0 .998-.492 1.83-1.008 2.435-.796.934-1.902 1.245-2.947 1.132-1.021-.11-2.01-.619-2.752-1.36-.453-.453-1.03-.73-1.552-.786z"
                fill-rule="evenodd"
              />
            </svg>
          </i>
          <span
            class="text-tiny mr-1"
          >
            MEDIUM
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex items-center justify-between p-2 bg-neutral-shade-3 rounded h-9"
    >
      <span
        class="text-tiny font-medium"
      >
        Primary Project Supervisor
      </span>
      <div
        class="flex items-center"
      >
        <i
          aria-hidden="true"
          class="ci-warning_outline text-sm text-data-red-30 mr-0.5"
        />
        <span
          class="text-tiny text-data-red-30 font-bold uppercase"
        >
          At risk
        </span>
      </div>
    </div>
    <div
      class="flex items-center justify-between p-2 bg-neutral-shade-3 rounded h-9"
    >
      <span
        class="text-tiny font-medium"
      >
        Contractor
      </span>
      <div
        class="flex items-center"
      >
        <i
          aria-hidden="true"
          class="ci-warning_outline text-sm text-data-red-30 mr-0.5"
        />
        <span
          class="text-tiny text-data-red-30 font-bold uppercase"
        >
          At risk
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
